--- a/Euler.tex
+++ b/Euler.tex
@@ -361,8 +361,7 @@ We may therefore write Euler's equation in conservation form:
 \]
 
 
-\section{Bernouilli's principle}
-
+\input{vorticity}
 \input{Bernoulli}
 
 
