--- a/chapter_inviscid.tex
+++ b/chapter_inviscid.tex
@@ -9,9 +9,7 @@
 
 \chapter{Hydrostatics}
 
-\section{Incompressible fluids}
-
-\section{Compressible fluids}
+\input{hydrostatics}
 
 \chapter{Sound waves}
 
