--- a/sound_waves.tex
+++ b/sound_waves.tex
@@ -86,12 +86,9 @@ which is the wave equation. Its solutions are waves, and their speed,
 the speed of sound, is $c^2 = \kappa $. Our first impulse should be to
 check whether our prediction of the speed of sound matches the known
 value for some standard situations. By far, the best known situation
-is the speed of sound in air in standar conditions. Since air is, to
-a good approximation, a perfect gas, then
-\[
-p V = n R T \qquad\implies\qquad p  = \rho\frac{ R T}{m},
-\]
-where $m$ is the molar gas.
+is the speed of sound in air in standar conditions. Since air is, to a
+good approximation, a perfect gas, and Eq. \ref{eq:ideal_gas_EOS}
+applies.
 
 Then,
 \[
