--- a/chapter_inviscid.tex
+++ b/chapter_inviscid.tex
@@ -6,6 +6,11 @@
 \chapter{Euler's equations}
 
 \input{Euler}
+\input{vorticity}
+\input{Bernoulli}
+\input{Euler_reduced}
+\input{Euler_exercises}
+
 
 \chapter{Hydrostatics}
 
