--- a/glossary.tex
+++ b/glossary.tex
@@ -4,11 +4,19 @@
 %\makeglossaries
 
 \glsxtrnewsymbol[description={identity matrix/tensor}]{eye}{\eye}
+
 \glsxtrnewsymbol[description={unit vector}]{e}{\bhe}
 \glsxtrnewsymbol[description={position vector}]{r}{\bfr}
 \glsxtrnewsymbol[description={time}]{t}{\ensuremath{t}}
+\glsxtrnewsymbol[description={ordinary derivative}]{totald}{\ensuremath{d\cdot}}
+\glsxtrnewsymbol[description={partial derivative}]{partial}{\ensuremath{\partial\cdot}}
+\glsxtrnewsymbol[description={material time derivative}]{materiald}{\ensuremath{\frac{d\cdot}{dt}}}
+\glsxtrnewsymbol[description={del operator}]{nabla}{\ensuremath{\nabla\cdot}}
+
 
 \glsxtrnewsymbol[description={velocity field}]{u}{\bfu}
+\glsxtrnewsymbol[description={typical velocity scale}]{u0}{\ensuremath{u_0}}
+\glsxtrnewsymbol[description={typical length scale}]{L}{\ensuremath{L}}
 % \glsxtrnewsymbol[description={acceleration}]{a}{\ensuremath{a}}
 \glsxtrnewsymbol[description={acceleration of gravity}]{g}{\bfg}
 
@@ -22,4 +30,16 @@
 \glsxtrnewsymbol[description={matrix/tensor transpose}]{tran}{\tran}
 
 \glsxtrnewsymbol[description={temperature}]{T}{$T$}
+\glsxtrnewsymbol[description={pressure}]{p}{$p$}
+\glsxtrnewsymbol[description={mass density}]{rho}{$\rho$}
 
+\glsxtrnewsymbol[description={mass of a particle}]{mass}{\ensuremath{m}}
+\glsxtrnewsymbol[description={volume of a particle}]{vol}{\ensuremath{V}}
+
+
+\glsxtrnewsymbol[description={shear (first) viscosity coefficient}]{mu}{$\mu$}
+\glsxtrnewsymbol[description={second viscosity coefficient}]{lambda}{$\lambda$}
+\glsxtrnewsymbol[description={volume viscosity coefficient}]{zeta}{$\zeta$}
+
+\glsxtrnewsymbol[description={strain rate tensor}]{epsilon}{$\epsilon$}
+\glsxtrnewsymbol[description={shear stress tensor}]{tau}{$\tau$}
