more on capillary

--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -1,45 +1,49 @@
 @book{feynman2011feynman,
   title={The Feynman Lectures on Physics, Vol. II: The New Millennium Edition: Mainly Electromagnetism and Matter},
   author={Feynman, R.P. and Leighton, R.B. and Sands, M.},
-  isbn={9780465024940},
-  lccn={2010938208},
   series={Feynman Lectures on Physics},
-  url={https://books.google.es/books?id=hlRhwGK40fgC},
   year={2011},
   publisher={Basic Books}
 }
+  isbn={9780465024940},
+  lccn={2010938208},
+  url={https://books.google.es/books?id=hlRhwGK40fgC},
+
 
 @book{landau2013fluid,
   title={Fluid Mechanics},
   author={Landau, L.D. and Lifshitz, E.M.},
   number={v. 6},
-  isbn={9781483140506},
   year={2013},
   publisher={Elsevier Science}
 }
   url={https://books.google.es/books?id=CeBbAwAAQBAJ},
+  isbn={9781483140506},
+
 
 @book{white1991viscous,
   title={Viscous Fluid Flow},
   author={White, F.M.},
-  isbn={9780070697126},
-  lccn={90038967},
   series={McGraw-Hill series in mechanical engineering},
   year={1991},
   publisher={McGraw-Hill}
 }
   url={https://books.google.es/books?id=G6IeAQAAIAAJ},
+  isbn={9780070697126},
+  lccn={90038967},
+
 
 @book{white2011fluid,
   title={Fluid Mechanics},
   author={White, F.M.},
-  isbn={9780073529349},
-  lccn={2010481187},
   series={McGraw-Hill series in mechanical engineering},
   year={2011},
   publisher={McGraw Hill}
 }
   url={https://books.google.es/books?id=egk8SQAACAAJ},
+  isbn={9780073529349},
+  lccn={2010481187},
+
 
 @book{Brehms_Tierleben,
 	title="Brehms Tierleben ",
@@ -101,3 +105,13 @@ revision="W Kranz, 1952"
 
 
 
+@book{whitham2011linear,
+  title={Linear and Nonlinear Waves},
+  author={Whitham, G.B.},
+  series={Pure and Applied Mathematics: A Wiley Series of Texts, Monographs and Tracts},
+  year={2011},
+  publisher={Wiley}
+}
+  url={https://books.google.es/books?id=84Pulkf-Oa8C},
+  isbn={9781118031209},
+  lccn={99028957},
