--- a/gravity_capillary_waves.tex
+++ b/gravity_capillary_waves.tex
@@ -280,3 +280,34 @@ grows larger and larger with the wavelength, but as we have seen in
 the previous section, as the wavelength becomes comparable to the
 depth there will be a crossover to some finite velocity.
 
+Only the deep-water limit. Notice that, while this limit was bound to
+be violated sooner or later for long gravity waves (when their
+wave-length begins to be comparable to the water depth), capillary
+waves will eventually approach this limit at small wave-lengths.
+
+Let us consider explicitely an upper phase (``air'') of density
+$\rho'$ and a lower one (``water'') with density $\rho'$ (all primed
+variables refer to the upper phase in this section). They are
+separated by the interfacial surface at $z=\eta(x,y)$, but we will
+suppose that the surface fluctuates around a well-defined position,
+which we will take, for convenience, as $z=0$. The total potential
+energy is then
+\[
+U=
+\iint dx dy   \int_{-H}^\eta  dz  ( \rho g z)
+\iint dx dy   \int_\eta^{H'}  dz  ( \rho' g z)  ,
+\]
+where we suppose the bottom is at $z=-H$ and the air ends at $z=H'$. These
+limits are not important, since we will consider later the limit
+in which both are very large.
+
+We may split the two integrals at $z=0$, the equilibrium surface:
+\begin{align*}
+\iint dx dy   \int_{-H}^\eta  dz   &= 
+\iint dx dy   \int_{-H}^0  dz   +
+\iint dx dy   \int_{0}^\eta  dz   \\
+\iint dx dy   \int_\eta^{H'}  dz    &=
+\iint dx dy   \int_\0^{H'}  dz  -
+\iint dx dy   \int_\eta^{H'}  dz 
+\begin{align*}
+
