--- a/gravity_waves.tex
+++ b/gravity_waves.tex
@@ -33,6 +33,7 @@ We have the following boundary conditions for the velocity:
   % p&=0 \\
   \label{eq:waves_bc}
   u_z(z=-h) &= 0 \\
+  \label{eq:waves_bc2}
   u_z(z=0) &=  \frac{\partial \eta}{\partial t}
 \end{align}
 
